# PerCeptBot

./: README.md
BLE/: platformio.ini
BLE/src/: main.cpp
PerCept/: pubspec.yaml
PerCept/android/app/: build.gradle
PerCept/assets/: messages.json  textcnnvab.json
PerCept/lib/: chat.dart  main.dart
k210/: .config  .config.old  CMakeLists.txt  cconfig.h  k210_robot.code-workspace  rtconfig.h  rtconfig.py
k210/applications/: Happy_Stats.c  Normal_Stats.c  SConscript  Sad_Stats.c  cpu_usage.c  cpu_usage.h  main.c  run_model.c  uart.c
k210/applications/lvgl/: SConscript  lv_conf.h  lv_port_disp.c  lv_port_indev.c
k210/driver/: drv_lcd.c  drv_lcd.h  drv_mpylcd.c
